[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["kolya <kolya.sidorov00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
drf-yasg = "^1.21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
